--- a/RouteParser/RouteParser/RouteParser.csproj
+++ b/RouteParser/RouteParser/RouteParser.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.8.4" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="SharpKml.Core" Version="3.1.0" />
   </ItemGroup>
